--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <title>TGP index</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 80px;
+            background-color: #121212;
+            color: white;
+
+        }
+        h1 {
+            margin-bottom: 40px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 12px 25px;
+            margin: 10px;
+            font-size: 18px;
+            color: white;
+            background-color: #202020;
+            border: none;
+            border-radius: 6px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: #161616;
+        }
+    </style>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
+
+    <h1>Choose your language</h1>
+
+    <a href="https://tynoxgamesproduction.github.io/roadmap-tgp/public/Roadmap-us.html" class="btn">🇺🇸</a>
+    <a href="https://tynoxgamesproduction.github.io/roadmap-tgp/public/Roadmap-fr.html" class="btn">🇫🇷</a>
+
 </body>
 </html>
